syntax = "proto3";

import "commontype.proto";

option csharp_namespace = "AbyssCLI.ABI";

message UIAction {
	message Init {
		bytes root_key = 1;
		string name = 2;
	}
	message Kill {
		int32 code = 1;
	}

	message MoveWorld {
		string world_url = 1;
	}

	// Address Bar Input
	message ShareContent {
		bytes uuid = 1;
		string url = 2;
		Vec3 pos = 3;
		Vec4 rot = 4;
	}
	message UnshareContent {
		bytes uuid = 1;
	}

	message ConnectPeer {
		string aurl = 1;
	}

	oneof inner {
		Init init = 1;
		Kill kill = 2;
		MoveWorld move_world = 3;
		ShareContent share_content = 4;
		UnshareContent unshare_content = 5;

		ConnectPeer connect_peer = 10;
	}
}